crates/patok-tui/tests/snapshots/ui__a_discovery_run_leaves_its_own_finished_line.snap
---
source: crates/patok-tui/tests/ui.rs
expression: screen
---
            ┌ Discovery ───────────────────────────────────────────────────────┐
[ Research ]│scanning the project                                              │
      ↓     │Discovery finished in 45 sec                                      │
[   Plan   ]│                                                                  │
      ↓     │                                                                  │
[  Build   ]│                                                                  │
      ↓     └──────────────────────────────────────────────────────────────────┘
[  Review  ]┌ Tasks | 1/3 - 2 left ────────────────────────────────────────────┐
            │✔ T1.1  scaffold the workspace                                    │
[   Ship   ]│○ T1.2  add the parser for task files                             │
[ Discover ]│○ T1.3  wire the engine to the shell                              │
            │ a add tasks · i inject task · Enter start build · ↑↓ scroll      │
            └──────────────────────────────────────────────────────────────────┘
 STOPPED  sprint  Enter  start build  ?  settings  t  theme  d  detach  q  quit
