crates/patok-tui/tests/snapshots/ui__a_finished_builder_session_leaves_one_status_line_and_hides_the_timer.snap
---
source: crates/patok-tui/tests/ui.rs
expression: screen
---
            ┌ Builder ─────────────────────────────────────────────────────────┐
[ Research ]│── T1.2: add the parser for task files                            │
      ↓     │working on it                                                     │
[   Plan   ]│Builder finished in 2 min 05 sec                                  │
      ↓     │✔ T1.2 done (abc1234)                                             │
[  Build   ]│                                                                  │
      ↓     └──────────────────────────────────────────────────────────────────┘
[  Review  ]┌ Tasks | 1/3 - 2 left ────────────────────────────────────────────┐
            │✔ T1.1  scaffold the workspace                                    │
[ Discover ]│○ T1.2  add the parser for task files                             │
            │○ T1.3  wire the engine to the shell                              │
            │ a add tasks · i inject task · Enter start build · ↑↓ scroll      │
            └──────────────────────────────────────────────────────────────────┘
 STOPPED  sprint                                    Enter  start build  m  menu
