crates/patok-tui/tests/snapshots/ui__a_finished_plan_stage_planner_line_precedes_the_builder_announcement.snap
---
source: crates/patok-tui/tests/ui.rs
expression: planner_screen
---
             ┌ Planner ───────────────────────────────────────────────── 00:00 ┐
[ Research  ]│── T1.2: add the parser for task files                           │
      ↓      │drafting the plan                                                │
[   Plan    ]│Planner finished in 45 sec                                       │
      ↓      │ ↑↓ scroll · PgUp/PgDn page · End follow · Tab tasks             │
[   Build   ]└─────────────────────────────────────────────────────────────────┘
      ↓      ┌ Tasks | 1/3 - 2 left ───────────────────────────────────────────┐
[  Review   ]│✔ T1.1  scaffold the workspace                                   │
             │▶ T1.2  add the parser for task files                            │
[   Ship    ]│○ T1.3  wire the engine to the shell                             │
[ Discover  ]│                                                                 │
[ Learnings ]│                                                                 │
             └─────────────────────────────────────────────────────────────────┘
 RUNNING  sprint     Esc  stop build  ?  settings  t  theme  d  detach  q  quit
