crates/patok-tui/tests/snapshots/ui__a_reviewer_session_started_switches_the_frame_title_to_its_provider_and_model.snap
---
source: crates/patok-tui/tests/ui.rs
expression: screen
---
            ┌ Reviewer | Claude - opus ───────────────────────────────── 00:00 ┐
[ Research ]│Reviewer started (claude, opus)                                   │
      ↓     │Review                                                            │
[   Plan   ]│Verifying the builder's claims.                                   │
      ↓     │ ↑↓ scroll · PgUp/PgDn page · End follow · Tab tasks              │
[  Build   ]└──────────────────────────────────────────────────────────────────┘
      ↓     ┌ Tasks | 1/3 - 2 left ────────────────────────────────────────────┐
[  Review  ]│✔ T1.1  scaffold the workspace                                    │
            │▶ T1.2  add the parser for task files                             │
[   Ship   ]│○ T1.3  wire the engine to the shell                              │
[ Discover ]│                                                                  │
            │                                                                  │
            └──────────────────────────────────────────────────────────────────┘
 RUNNING  sprint     Esc  stop build  ?  settings  t  theme  d  detach  q  quit
