crates/patok-tui/tests/snapshots/ui__a_started_builder_session_leaves_the_starting_line_before_the_finished_line.snap
---
source: crates/patok-tui/tests/ui.rs
expression: screen
---
            ┌ Builder ────────────────────────────────────────────────── 00:00 ┐
[ Research ]│── T1.2: add the parser for task files                            │
      ↓     │Builder started (mock)                                            │
[   Plan   ]│working on it                                                     │
      ↓     │Builder finished in 2 min 05 sec                                  │
[  Build   ]│                                                                  │
      ↓     │                                                                  │
[  Review  ]│                                                                  │
            │                                                                  │
[ Discover ]│                                                                  │
            │                                                                  │
            │                                                                  │
            │                                                                  │
            │                                                                  │
            │ ↑↓ scroll · PgUp/PgDn page · End follow · Tab tasks              │
            └──────────────────────────────────────────────────────────────────┘
            ┌ Tasks | 1/3 - 2 left ────────────────────────────────────────────┐
            │✔ T1.1  scaffold the workspace                                    │
            │▶ T1.2  add the parser for task files                             │
            │○ T1.3  wire the engine to the shell                              │
            │                                                                  │
            │                                                                  │
            └──────────────────────────────────────────────────────────────────┘
 RUNNING  sprint     Esc  stop build  ?  settings  t  theme  d  detach  q  quit
