crates/patok-tui/tests/snapshots/ui__a_started_line_with_a_model_shows_it.snap
---
source: crates/patok-tui/tests/ui.rs
expression: screen
---
            ┌ Builder | mock - m-brand ───────────────────────────────── 00:00 ┐
[ Research ]│Builder started (mock, m-brand)                                   │
      ↓     │                                                                  │
[   Plan   ]│                                                                  │
      ↓     │ ↑↓ scroll · PgUp/PgDn page · End follow · Tab tasks              │
[  Build   ]└──────────────────────────────────────────────────────────────────┘
      ↓     ┌ Tasks | 1/3 - 2 left ────────────────────────────────────────────┐
[  Review  ]│✔ T1.1  scaffold the workspace                                    │
            │○ T1.2  add the parser for task files                             │
[ Discover ]│○ T1.3  wire the engine to the shell                              │
            │                                                                  │
            │                                                                  │
            └──────────────────────────────────────────────────────────────────┘
 RUNNING  sprint     Esc  stop build  ?  settings  t  theme  d  detach  q  quit
