crates/patok-tui/tests/snapshots/ui__an_over_an_hour_run_formats_hours_and_minutes.snap
---
source: crates/patok-tui/tests/ui.rs
expression: screen
---
            ┌ Builder ─────────────────────────────────────────────────────────┐
[ Research ]│── T1.2: add the parser for task files                            │
      ↓     │working on it                                                     │
[   Plan   ]│Builder finished in 1 h 05 min                                    │
      ↓     │✔ T1.2 done (abc1234)                                             │
[  Build   ]│                                                                  │
      ↓     └──────────────────────────────────────────────────────────────────┘
[  Review  ]┌ Tasks | 1/3 - 2 left ────────────────────────────────────────────┐
            │✔ T1.1  scaffold the workspace                                    │
[   Ship   ]│○ T1.2  add the parser for task files                             │
[ Discover ]│○ T1.3  wire the engine to the shell                              │
            │ a add tasks · i inject task · Enter start build · ↑↓ scroll      │
            └──────────────────────────────────────────────────────────────────┘
 STOPPED  sprint  Enter  start build  ?  settings  t  theme  d  detach  q  quit
